--- a/css/styles.css
+++ b/css/styles.css
@@ -180,6 +180,13 @@ img {
 }
 
 .start {
+    background-image: linear-gradient(
+	to bottom, 
+	rgba(46, 47, 66, 0.7), 
+	rgba(46, 47, 66, 0.7)
+	), url(/images/hero-fon.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
     background-color: #2E2F42;
     height: 600px;
     padding: 188px 0;
