--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,6 @@ p {
 }
 
 .lii .title,
-.team-div .title,
 .lii-div .title {
     margin-bottom: 8px;
 }
@@ -154,31 +153,6 @@ img {
     letter-spacing: 0.32px;
 }
 
-.foot {
-    background-color: #2E2F42;
-    padding: 100px 0;
-}
-
-.logo-foot {
-    font-family: "Raleway", sans-serif;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 1.16;
-    letter-spacing: 0.54px;
-    text-transform: uppercase;
-    text-decoration: none;
-    color: #4d5ae5;
-    margin-bottom: 16px;
-    display: inline-block;
-}
-
-.foot-text {
-    color: #F4F4FD;
-    letter-spacing: 0.32px;
-    line-height: 1.5;
-    max-width: 264px;
-}
-
 .start {
     background-image: linear-gradient(
 	to bottom, 
@@ -220,6 +194,24 @@ img {
     align-items: flex-start;
     flex-direction: column;
     width: calc((100% - 72px) / 4);
+}
+
+.ics2 {
+    background-color:#F4F4FD;
+    width: 264px;
+    height: 112px;
+    flex-shrink: 0;
+    background-color: #F4F4FD;
+    border-radius: 4px;
+    border: 1px solid #8E8F99;
+    margin-bottom: 8px;
+}
+
+.icon-s2 {
+    width: 64px;
+    height: 64px;
+    flex-shrink: 0;
+    margin: 24px 100px;
 }
 
 .team {
@@ -317,10 +309,34 @@ box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47,
     justify-content: center;
     align-items: center;
     padding: 32px 0;
+    gap: 8px;
 }
 
 .team-div .prg {
     text-align: center;
+}
+
+.ics3 {
+    display: flex;
+    gap: 24px;
+}
+
+.icon-s3 {
+    width: 16px;
+    height: 16px;
+    margin: 12px;
+}
+
+.ics3-linc {
+   background-color: #4D5AE5;
+   border-radius: 50%;
+   width: 40px;
+   height: 40px;
+}
+
+.ics3-linc:hover,
+.ics3-linc:focus {
+   background-color: #31D0AA;
 }
 
 .portfolio {
@@ -359,3 +375,62 @@ box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47,
     border-top: none;
 }
 
+.foot {
+    background-color: #2E2F42;
+    padding: 100px 0;
+}
+
+.logo-foot {
+    font-family: "Raleway", sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.16;
+    letter-spacing: 0.54px;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: #4d5ae5;
+    margin-bottom: 16px;
+    display: inline-block;
+}
+
+.foot-text {
+    color: #F4F4FD;
+    letter-spacing: 0.32px;
+    line-height: 1.5;
+    max-width: 264px;
+}
+
+.foot-cl {
+    display: flex;
+}
+
+.icft-linc {
+    background-color: #4D5AE5;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+}
+
+.icon-ft {
+    width: 24px;
+    height: 24px;
+    margin: 8px;
+}
+
+.foot-soc {
+    margin-left: 120px;
+}
+
+.foot-soc p {
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.32px;
+    color: #FFF;
+    margin-bottom: 16px;
+}
+
+.icft {
+    display: flex;
+    gap: 16px;
+
+}
