--- a/css/styles.css
+++ b/css/styles.css
@@ -411,6 +411,11 @@ box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47,
     height: 40px;
 }
 
+.icft-linc:hover,
+.icft-linc:focus {
+    background-color: #31D0AA;
+}
+
 .icon-ft {
     width: 24px;
     height: 24px;
