--- a/css/styles.css
+++ b/css/styles.css
@@ -364,6 +364,32 @@ box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47,
     width: calc((100% - 48px) / 3);
 }
 
+.p-port {
+    color: #F4F4FD;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.32px;
+    position: relative;
+    overflow: hidden;
+}
+
+.p-port:hover .overlay {
+    transform: translateX(0);
+}
+
+.overlay {
+    padding: 40px 32px 164px;
+    background:#4D5AE5;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+    transform: translateX(-100%);
+    transition: transform 250ms ease-in-out;
+}
+
 .lii-div {
     display: flex;
     padding: 32px 16px;
