--- a/css/styles.css
+++ b/css/styles.css
@@ -76,6 +76,26 @@ img {
     padding-bottom: 24px;
 }
 
+.nav-ul .current {
+    color: #404BBF;
+    position: relative;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.current::after {
+    position: absolute;
+    content: '';
+    width: 100%;
+    height: 4px;
+    margin-top: 20px;
+    background-color: #404BBF;
+    display: flex;
+    border-radius: 2px;
+    left: 0px;
+    bottom: -4px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .nav-ul .link {
     padding: 24px 0;
 }
@@ -85,24 +105,16 @@ img {
     gap: 40px;
 }
 
-.page-nav .link {
+ .link {
+    text-decoration: none;
     color: #2E2F42;
     font-size: 16px;
     font-weight: 500;
-    transition-delay: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.page-nav .link:hover {
-    color: #404BBF;
-}
-
-.page-nav .link:active {
-    color: #404BBF;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link:hover,
-.link:focus {
+.link:focus, .link:active {
     color: #404BBF;
 }
 
@@ -116,8 +128,7 @@ img {
     padding-top: 24px;
     padding-bottom: 24px;
     margin-left: 332px;
-    transition-delay: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .page-add .link {
@@ -267,17 +278,11 @@ img {
     border: none;
     border-radius: 4px;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-    transition-delay: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button:hover, .button:focus {
     background-color: #404BBF;
-}
-
-.link {
-    color: #434455;
-    text-decoration: none;
 }
 
 .our-team {
@@ -325,8 +330,7 @@ box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47,
 .ics3 {
     display: flex;
     gap: 24px;
-    transition-delay: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-s3 {
@@ -379,8 +383,7 @@ box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47,
     letter-spacing: 0.32px;
     position: relative;
     overflow: hidden;
-    transition-delay: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .p-port:hover .overlay {
@@ -446,8 +449,7 @@ box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47,
     border-radius: 50%;
     width: 40px;
     height: 40px;
-    transition-delay: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icft-linc:hover,
