--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,9 @@
 .hedr {
     height: 72px;
     border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 body {
@@ -92,18 +95,24 @@ img {
     display: flex;
     border-radius: 2px;
     left: 0px;
-    bottom: -4px;
+    bottom: -1px;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav-ul .link {
     padding: 24px 0;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .add-ul {
     display: flex;
     gap: 40px;
 }
+
+.add-ul .link {
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 
  .link {
     text-decoration: none;
@@ -168,24 +177,21 @@ img {
     letter-spacing: 0.32px;
 }
 
-.start {
-    background-image: linear-gradient(
-	to bottom, 
-	rgba(46, 47, 66, 0.7), 
-	rgba(46, 47, 66, 0.7)
-	), url(/images/hero-fon.jpg);
+.start-con {
+    display: flex;
+    gap: 48px;
+    align-items: center;
+    flex-direction: column;
+    background-image: linear-gradient(to bottom,
+    rgba(46, 47, 66, 0.7),
+    rgba(46, 47, 66, 0.7)), url(/images/hero-fon.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-color: #2E2F42;
     height: 600px;
     padding: 188px 0;
-}
-
-.start-con {
-   display: flex;
-   gap: 48px;
-   align-items: center;
-   flex-direction: column;
+    max-width: 1440px;
+    background-position: center;
 }
 
 .start-con .page-title {
@@ -212,6 +218,9 @@ img {
 }
 
 .ics2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background-color:#F4F4FD;
     width: 264px;
     height: 112px;
@@ -222,7 +231,7 @@ img {
     margin-bottom: 8px;
 }
 
-.icon-s2 {
+.ics2 svg {
     width: 64px;
     height: 64px;
     flex-shrink: 0;
@@ -278,7 +287,7 @@ img {
     border: none;
     border-radius: 4px;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button:hover, .button:focus {
@@ -325,6 +334,12 @@ box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47,
 
 .team-div .prg {
     text-align: center;
+}
+
+.team-div ul {
+    display: flex;
+    gap: 24px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .ics3 {
@@ -374,13 +389,20 @@ box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47,
     flex-shrink: 0;
     background: #FFF;
     width: calc((100% - 48px) / 3);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.liii:hover {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.liii:hover p {
+    transform: translateY(0%);
 }
 
 .p-port {
-    color: #F4F4FD;
-    font-size: 16px;
-    line-height: 24px;
-    letter-spacing: 0.32px;
     position: relative;
     overflow: hidden;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -392,16 +414,18 @@ box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47,
 
 .overlay {
     color: #F4F4FD;
-    padding: 40px 32px 164px;
+    padding: 40px 32px;
     background:#4D5AE5;
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-
-    transform: translateX(-100%);
-    transition: transform 250ms ease-in-out;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    transform: translateY(-100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .lii-div {
@@ -438,18 +462,27 @@ box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47,
     letter-spacing: 0.32px;
     line-height: 1.5;
     max-width: 264px;
+    font-weight: 500;
+}
+
+.foot-div {
+    margin-right: 120px;
 }
 
 .foot-cl {
     display: flex;
+    align-items: baseline,
 }
 
 .icft-linc {
     background-color: #4D5AE5;
     border-radius: 50%;
-    width: 40px;
-    height: 40px;
+    width: 100%;
+    height: 100%;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .icft-linc:hover,
@@ -458,10 +491,16 @@ box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47,
     color: #F4F4FD;
 }
 
+.foot-socli {
+    display: flex;
+    gap: 16px;
+}
+
 .icon-ft {
-    width: 24px;
-    height: 24px;
+    width: 24;
+    height: 24;
     margin: 8px;
+    fill: #f4f4fd;
 }
 
 .foot-soc {
@@ -478,6 +517,6 @@ box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47,
 
 .icft {
     display: flex;
-    gap: 16px;
-
+    width: 40px;
+    height: 40px;
 }
