--- a/css/styles.css
+++ b/css/styles.css
@@ -336,7 +336,7 @@ box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47,
     text-align: center;
 }
 
-.team-div ul {
+.our-team-soc {
     display: flex;
     gap: 24px;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -424,7 +424,7 @@ box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47,
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    transform: translateY(-100%);
+    transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
