--- a/css/styles.css
+++ b/css/styles.css
@@ -49,13 +49,16 @@ img {
     overflow: hidden;
 }
 
+.hedr {
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 1px 6px rgba(46, 47, 66, 0.08);
+}
+
 .page-head {
     display: flex;
     height: 72px;
     border-bottom: 1px solid #e7e9fc;
-    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
-        0px 1px 1px rgba(46, 47, 66, 0.16),
-        0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .container {
@@ -174,21 +177,24 @@ img {
     letter-spacing: 0.32px;
 }
 
+.start {
+    background-image: linear-gradient(to bottom,
+    rgba(46, 47, 66, 0.7),
+    rgba(46, 47, 66, 0.7)), url(/images/hero-fon.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-color: #2E2F42;
+    max-width: 1440px;
+    background-position: center;
+}
+
 .start-con {
     display: flex;
     gap: 48px;
     align-items: center;
     flex-direction: column;
-        background-image: linear-gradient(to bottom,
-                    rgba(46, 47, 66, 0.7),
-                    rgba(46, 47, 66, 0.7)), url(/images/hero-fon.jpg);
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-color: #2E2F42;
-            height: 600px;
-            padding: 188px 0;
-            max-width: 1440px;
-            background-position: center;
+    height: 600px;
+    padding: 188px 0;
 }
 
 .start-con .page-title {
@@ -335,26 +341,30 @@ box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47,
 }
 
 .our-team-soc {
+    justify-content: center;
     display: flex;
     gap: 24px;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icst {
     display: flex;
     gap: 24px;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-st {
     margin: 12px;
+    fill: #f4f4fd;
 }
 
 .icst-linc {
+   display: flex;
+   align-items: center;
+   justify-content: center;
    background-color: #4D5AE5;
    border-radius: 50%;
    width: 40px;
    height: 40px;
+   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icst-linc:hover,
@@ -475,7 +485,7 @@ box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47,
     border-radius: 50%;
     width: 100%;
     height: 100%;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     display: flex;
     align-items: center;
     justify-content: center;
