--- a/css/styles.css
+++ b/css/styles.css
@@ -468,6 +468,9 @@ box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47,
     letter-spacing: 0.32px;
     line-height: 1.5;
     max-width: 264px;
+}
+
+.foot-p {
     font-weight: 500;
 }
 
@@ -493,7 +496,7 @@ box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47,
 
 .icft-linc:hover,
 .icft-linc:focus {
-    background-color: #31D0AA;
+    background-color: #404bbf;;
     color: #F4F4FD;
 }
 
