--- a/css/styles.css
+++ b/css/styles.css
@@ -367,7 +367,7 @@ box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47,
    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.icst-linc:hover, .icst-linc:focus {
+.icst .icst-linc:hover, .icst .icst-linc:focus {
    background-color: #404bbf;
 }
 
@@ -494,7 +494,7 @@ box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47,
     justify-content: center;
 }
 
-.icft-linc:hover, .icft-linc:focus {
+.icft .icft-linc:hover, .icft .icft-linc:focus {
     background-color: #31d0aa;
 }
 
