--- a/css/styles.css
+++ b/css/styles.css
@@ -368,7 +368,7 @@ box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47,
 }
 
 .icst .icst-linc:hover, .icst .icst-linc:focus {
-   background-color: #404bbf;
+   background-color: #31d0aa;
 }
 
 
