--- a/css/styles.css
+++ b/css/styles.css
@@ -185,7 +185,8 @@ img {
     background-size: cover;
     background-color: #2E2F42;
     background-position: center;
-        max-width: 1440px;
+    max-width: 1440px;
+    margin: 0 auto;
 }
 
 .start-con {
@@ -368,7 +369,7 @@ box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47,
 }
 
 .icst .icst-linc:hover, .icst .icst-linc:focus {
-   background-color: #31d0aa;
+   background-color: #404bbf;
 }
 
 
