--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,7 @@ ul, ol {
 
 img {
     max-width: 100%;
+    display: block;
 }
 
 .visually-hidden {
@@ -110,6 +111,7 @@ img {
 }
 
 .add-ul .link {
+    font-weight: 400;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -180,7 +182,7 @@ img {
 .start {
     background-image: linear-gradient(to bottom,
     rgba(46, 47, 66, 0.7),
-    rgba(46, 47, 66, 0.7)), url(/images/hero-fon.jpg);
+    rgba(46, 47, 66, 0.7)), url(../images/hero-fon.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-color: #2E2F42;
@@ -194,7 +196,6 @@ img {
     gap: 48px;
     align-items: center;
     flex-direction: column;
-    height: 600px;
     padding: 188px 0;
 }
 
@@ -217,10 +218,7 @@ img {
 }
 
 .lii {
-    display: flex;
     background-color: #FFFFFF;
-    align-items: flex-start;
-    flex-direction: column;
     width: calc((100% - 72px) / 4);
 }
 
@@ -240,7 +238,6 @@ img {
 
 .icss svg {
     flex-shrink: 0;
-    margin: 24px 100px;
 }
 
 .team {
@@ -310,12 +307,7 @@ img {
 }
 
 .our-team-li {
-text-align: center;
 background-color: #FFFFFF;
-display: inline-flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
 width: calc((100% - 72px) / 4);
 border-radius: 0px 0px 4px 4px;
 box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
@@ -508,10 +500,6 @@ box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47,
 .icon-ft {
     margin: 8px;
     fill: #f4f4fd;
-}
-
-.foot-soc {
-    margin-left: 120px;
 }
 
 .foot-soc p {
